# dfa-simulation-engine

./: .gitignore  Cargo.toml  README.md  output.json
dsl/: cab.lua  test.lua  uber.lua  video.lua  video_complex.lua
src/: main.rs
src/dsl/: global_reader.rs  machine_reader.rs  mod.rs  reader.rs
src/io/: file_io.rs
src/machine/: abstract_machine.rs  dfa.rs  mod.rs  state.rs  video.rs
src/stream/: globals.rs  mod.rs
