[package]
name = "dfa-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.2"
rand = "0.8.5"
rlua = "0.19.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
